fix bug on firefox

--- a/stopwatch.less
+++ b/stopwatch.less
@@ -285,47 +285,39 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(-2000px);
-        transform: translateY(-2000px);
     }
 
     60% {
         opacity: 1;
         -webkit-transform: translateY(30px);
-        transform: translateY(-2000px);
     }
 
     80% {
         -webkit-transform: translateY(-10px);
-        transform: translateY(-2000px);
     }
 
     100% {
         -webkit-transform: translateY(0);
-        transform: translateY(-2000px);
     }
 }
 
 @keyframes bounceInDown {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(-2000px);
         transform: translateY(-2000px);
     }
 
     60% {
         opacity: 1;
-        -webkit-transform: translateY(30px);
-        transform: translateY(-2000px);
+        transform: translateY(30px);
     }
 
     80% {
-        -webkit-transform: translateY(-10px);
-        transform: translateY(-2000px);
+        transform: translateY(-10px);
     }
 
     100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(-2000px);
+        transform: translateY(0);
     }
 }
 
